--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '27.0.3'
+    compileSdkVersion 30
+//    buildToolsVersion '27.0.3'
 
     defaultConfig {
         applicationId "com.bosictsolution.waiterone"
-        minSdkVersion 16
-        targetSdkVersion 25
-        versionCode 1
+        minSdkVersion 24
+        targetSdkVersion 30
+        versionCode 2
         versionName "2.0"
     }
     buildTypes {
@@ -20,19 +20,23 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'junit:junit:4.12'
-    implementation 'com.android.support:appcompat-v7:25.1.0'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation files('libs/root/opencsv-2.4.jar')
     implementation files('libs/root/AndroidLib_1070.jar')
     implementation files('libs/root/jtds-1.2.7.jar')
-    implementation 'com.android.support:cardview-v7:25.1.0'
-    implementation 'com.android.support:recyclerview-v7:25.1.0'
-    implementation 'com.android.support:design:25.1.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'com.google.android.material:material:1.0.0'
     implementation 'de.greenrobot:eventbus:2.2.1'
     implementation 'com.google.dagger:dagger:2.0'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.0'
