--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,20 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.bosictsolution.waiterone">
 
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.BLUETOOTH" />
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/logo2"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity
+            android:name=".AddItemSubActivity"
+            android:exported="true"
+            android:screenOrientation="landscape" />
         <activity
             android:name=".SplashActivity"
             android:screenOrientation="landscape">
@@ -186,11 +182,10 @@
             android:name=".BondBtActivity"
             android:screenOrientation="landscape" />
 
-        <service android:name="common.BtService" />
-
         <activity
             android:name=".PrintOrderActivity"
             android:screenOrientation="landscape" />
+
         <activity
             android:name=".PrintOrderMultiPrinterActivity"
             android:screenOrientation="landscape" />
@@ -202,7 +197,15 @@
             android:name=".TranDetailActivity"
             android:label="Sale Items"
             android:screenOrientation="landscape" />
-        <activity android:name=".ExtraTranActivity"></activity>
+        <activity android:name=".ExtraTranActivity" />
+        <service android:name="common.BtService" />
     </application>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
 </manifest>
