--- a/desktop.ini
+++ b/desktop.ini
@@ -1,6 +1,6 @@
 [.ShellClassInfo]
 OriginalIcon=C:\Windows\system32\imageres.dll|-3
-IconResource=C:\Users\KO ZAW\Documents\FFOutput\d906atm-521311b7-e6d2-47d6-be25-db8cc2cb797b.ico,0
+IconResource=C:\WINDOWS\System32\SHELL32.dll,110
 [ViewState]
 Mode=
 Vid=
